fix bottom margin on small screens

--- a/card.css
+++ b/card.css
@@ -66,7 +66,7 @@ img {
     .book {
         min-width: 250px;
         height: 300px;
-        margin: 0;
+        margin: .75rem;
     }
 
     img {
